[package]
name = "rscp"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.4.0"
log = "0.4.17"
rustls-pemfile = "1.0.2"
s2n-quic = { version = "1.16.0", features = ["provider-address-token-default", "provider-tls-rustls"] }
tokio = { version = "1.25.0", features = ["rt", "rt-multi-thread", "macros", "fs"] }
