[package]
name = "librscp"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.4.0"
futures = "0.3.26"
log.workspace = true
ring = "0.16.20"
rustls-pemfile = "1.0.2"
openssl.workspace = true
s2n-quic = { version = "1.19.0", features = ["provider-address-token-default", "provider-tls-rustls"] }
tokio = { workspace = true, features = ["rt", "fs", "io-util"] }
