[package]
name = "rscp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.5", features = ["derive", "env"] }
flexi_logger = "0.25.3"
librscp = { version = "0.1.0", path = "../librscp" }
log = "0.4.17"
tokio = { version = "1.28.0", features = ["rt-multi-thread", "macros"] }
